--- a/user_settings.html
+++ b/user_settings.html
@@ -84,6 +84,9 @@
       <div class="container-fluid">
         <form>
           <div class="form-group">
+            <a href="signup_login.html" class="btn btn-default">Logout</a>
+          </div>
+          <div class="form-group">
             <label for="name">Name</label>
             <input type="name" class="form-control" id="name" placeholder="Name" value="Robert Downey, Jr.">
           </div>
