--- a/signup_login.html
+++ b/signup_login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -30,7 +30,56 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
+
 <body>
+ <script>
+	
+	function setCookie(user) {
+	    	document.cookie="user="+user;
+	}
+
+	function login(){
+		var email = document.getElementById("lemail").value;
+		var pass = document.getElementById("lpass").value;
+		$.ajax({
+			url: 'http://104.254.216.237/oneroom/phpscripts/login.php?username='+email+'&password='+pass,
+			dataType: "json",
+			success: function (response) {
+				alert(response);
+				//alert("you logged in!");
+		    },
+		    error: function(XMLHttpRequest, textStatus, errorThrown){
+				alert("Status: " + textStatus); alert("Error: " +errorThrown);
+		    }
+		});
+		//alert('did ajax call');	
+		setCookie(email);
+		//location.href='index.html';
+		
+	}
+	
+	function signup(){
+		var name = document.getElementById("sname").value;
+		var email = document.getElementById("semail").value;
+		var pass = document.getElementById("spass").value;
+		$.ajax({
+		   url: 'http://104.254.216.237/oneroom/phpscripts/register.php?username='+email+'&password='+pass+'&email='+email,
+		      success: function (response) {//response is value returned from php (for your example it's "bye bye"
+		           //alert(response);
+				   alert("You are now registered!");
+		      },
+		      error: function(XMLHttpRequest, textStatus, errorThrown){
+		           alert("Status: " + textStatus); alert("Error: " +errorThrown);
+		      }
+		      										  
+		});
+		//alert('did ajax call');
+		setCookie(email);
+		//location.href='index.html';
+
+		
+	}
+  </script>
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
@@ -48,27 +97,28 @@
               <p class="notice"></p>
               <form role="form" hidden="hidden" class="form signup">
                 <div class="form-group">
-                  <input type="text" placeholder="Name" class="form-control name"/>
+                  <input type="text" placeholder="Name" id="sname" class="form-control name"/>
                 </div>
                 <div class="form-group">
-                  <input type="email" placeholder="Email" class="form-control email"/>
+                  <input type="email" placeholder="Email" id="semail" class="form-control email"/>
                 </div>
                 <div class="form-group">
-                  <input type="password" placeholder="Password" class="form-control password"/>
+                  <input type="password" placeholder="Password" id="spass" class="form-control password"/>
                 </div>
                 <div class="actions">
-                  <button class="btn btn-default signup">Sign Up</button>
+                  <input class="btn btn-default signup" id='Signup' type='button' value='Signup' onclick="signup();"></input>
                 </div>
               </form>
               <form class="form login">
                 <div class="form-group">
-                  <input type="email" placeholder="Email" class="form-control email"/>
+                  <input type="email" placeholder="Email" id="lemail" class="form-control email"/>
                 </div>
                 <div class="form-group">
-                  <input type="password" placeholder="Password" class="form-control password"/>
+                  <input type="password" placeholder="Password" id="lpass" class="form-control password"/>
                 </div>
                 <div class="actions">
-                  <button class="btn btn-default login">Log In</button>
+                  <input class="btn btn-default login" id='Login' type='button' value='Login' onclick="login();"></input>
+		  
                 </div>
               </form>
             </div>
@@ -96,3 +146,4 @@
   </script>
 </body>
 </html>
+
