--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
   <![endif]-->
 </head>
 <body>
+<script>
+	if(document.cookie.indexOf("user=;") > -1){
+		location.href='signup_login.html';
+	} 
+</script>
   <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
