--- a/lights.html
+++ b/lights.html
@@ -17,6 +17,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-switch.css">
   <link rel="stylesheet" href="css/simple-sidebar.css">
   <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/main.css">
@@ -89,12 +90,13 @@
             <span class="scheduled-time">5:00pm</span>
             <!-- <span class="scheduled-time">None</span> -->
           </p>
-          <p class="subheader">
+          <!-- <p class="subheader">
             <strong>Current Setting:</strong>
             <span class="current-setting">On</span>
-          </p>
+          </p> -->
           <div class="actions">
             <a href="lights_edit.html" class="btn btn-default">Edit</a>
+            <input class="bs-switch hidden" type="checkbox" name="lights-on" checked>
           </div>
         </div>
       </div>
@@ -109,6 +111,7 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap-switch.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
   <script>
