--- a/lights_edit.html
+++ b/lights_edit.html
@@ -17,6 +17,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-switch.css">
   <link rel="stylesheet" href="css/simple-sidebar.css">
   <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/main.css">
@@ -85,18 +86,32 @@
         <form>
           <div class="form-group">
             <label for="title">Device/Action Title</label>
-            <input type="text" class="form-control" id="title" placeholder="Enter Device/Action Title" value="Toggle Lights">
+            <input type="text" class="form-control mid-length" id="title" placeholder="Enter Device/Action Title" value="Toggle Lights">
+          </div>
+          <div class="form-group form-inline">
+            <label>Scheduled Times</label>
+            <div class="li">
+              <input type="time" class="form-control short" value="17:00">
+              <span class="remove"><i class="fa fa-times"></i></span>
+            </div>
+            <div class="li">
+              <input type="time" class="li form-control short" value="18:00">
+              <span class="remove"><i class="fa fa-times"></i></span>
+            </div>
+            <button class="li btn btn-default">Add</button>
           </div>
           <div class="form-group">
-            <label for="time">Scheduled Time</label>
-            <input type="time" class="form-control" id="time" value="17:00">
-          </div>
-          <div class="form-group">
-            <label for="setting">Setting</label>
-            <select id="setting" class="form-control">
+            <label for="setting-type">Current Setting</label>
+            <!-- <select id="setting-type" class="form-control">
+              <option value="1">On/Off Switch</option>
+              <option value="2">State Dropdown</option>
+            </select> -->
+            <br>
+            <input class="bs-switch hidden" type="checkbox" name="lights-on" checked>
+            <!-- <select id="setting" class="form-control">
               <option value="1">On</option>
               <option value="2">Off</option>
-            </select>
+            </select> -->
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
           <a href="#" onclick="history.back();" class="btn btn-default">Cancel</a>
@@ -113,6 +128,7 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap-switch.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
   <script>
