--- a/lights.html
+++ b/lights.html
@@ -23,6 +23,9 @@
   <link rel="stylesheet" href="css/main.css">
 
   <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+  <script src="js/jquery.js"></script>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -97,6 +100,15 @@
           <div class="actions">
             <a href="lights_edit.html" class="btn btn-default">Edit</a>
             <input class="bs-switch hidden" type="checkbox" name="lights-on" checked>
+            <script>
+              $(function () {
+                $('.bs-switch').on('switchChange.bootstrapSwitch', function(e, on) {
+                  obj = {};
+                  obj.state = on ? 1 : 0;
+                  updateUtil(obj);
+                });
+              });
+            </script>
           </div>
         </div>
       </div>
@@ -107,9 +119,6 @@
   <!-- /#wrapper -->
 
   <!-- scripts -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-  <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/bootstrap-switch.js"></script>
   <script src="js/plugins.js"></script>
