--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -33,67 +33,7 @@
 </head>
 
 <body>
- <script>
 
-  function login(){
-    var email = document.getElementById("lemail").value;
-    var pass = document.getElementById("lpass").value;
-    $.ajax({
-      //url: 'http://104.254.216.237/oneroom/phpscripts/login.php?email='+email+'&password='+pass,
-      //dataType: "json",
-      url: 'phpscripts/login.php',
-      type: 'get',
-      data: {'email':email, 'password':pass},
-      dataType: 'json',
-      success: function (response) {
-        var id = response[0];
-        var name = response[2];
-        var email = response[3];
-        //var password = response[4];
-        alert("id:" + id + " name:" + name + " email:" + email);
-        document.cookie="user="+email;
-        location.href='index.html';
-
-        /*if(response.localeCompare("You are logged in")==0){
-          alert(response);
-          document.cookie="user="+email;
-          //location.href='index.html';
-        }else{
-          alert("No user with those credentials exists.");
-        }*/
-
-        },
-        error: function(XMLHttpRequest, textStatus, errorThrown){
-        //alert("Status: " + textStatus); alert("Error: " +errorThrown);
-        alert("Login Failed")
-        }
-    });
-  }
-
-  function signup(){
-    var name = document.getElementById("sname").value;
-    var email = document.getElementById("semail").value;
-    var pass = document.getElementById("spass").value;
-    $.ajax({
-      url: 'http://104.254.216.237/oneroom/phpscripts/register.php?name='+name+'&password='+pass+'&email='+email,
-
-      success: function (response) {
-        //if(parseInt(response)>=0){
-          alert("You are now Registered!");
-		  alert(response);
-          document.cookie="user="+email;
-          location.href='index.html';
-        /*} else{
-          alert("A user with that email already exists!");
-        }*/
-      },
-
-      error: function(XMLHttpRequest, textStatus, errorThrown){
-        alert("Status: " + textStatus); alert("Error: " + errorThrown);
-      }
-    });
-  }
-  </script>
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
@@ -161,4 +101,3 @@
   </script>
 </body>
 </html>
-
