--- a/user_settings.html
+++ b/user_settings.html
@@ -18,6 +18,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-switch.css">
   <link rel="stylesheet" href="css/simple-sidebar.css">
   <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/main.css">
@@ -35,7 +36,7 @@
 <script>
 	if(document.cookie.indexOf("user=;") > -1){
 		location.href='signup_login.html';
-	} 
+	}
 </script>
   <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -95,7 +96,7 @@
       <div class="container-fluid">
         <form>
           <div class="form-group">
-            <input type='button' value="Logout" onclick="logout();" class="btn btn-default"></input>                    
+            <input type='button' value="Logout" onclick="logout();" class="btn btn-default"></input>
           </div>
           <div class="form-group">
             <label for="name">Name</label>
@@ -126,6 +127,7 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap-switch.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
   <script>
