--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <script>
 	if(document.cookie.indexOf("user=;") > -1){
 		location.href='signup_login.html';
-	} 
+	}
 </script>
   <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -119,7 +119,9 @@
                 <a class="btn btn-primary" href="#" role="button">Play Now</a>
               </div>
             </div>
-          </div>
+          </div> -->
+        </div>
+        <!-- <div class="row">
           <div class="col-lg-4 device">
             <div class="jumbotron">
               <h2>Set Temp</h2>
@@ -130,9 +132,7 @@
                 <a class="btn btn-primary" href="#" role="button">Set Now</a>
               </div>
             </div>
-          </div> -->
-        </div>
-        <!-- <div class="row">
+          </div>
           <div class="col-lg-4 device">
             <div class="jumbotron">
               <h2>Security Cam</h2>
@@ -160,6 +160,7 @@
   <script src="js/bootstrap-switch.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/load-dashboard.js"></script>
   <script>
     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
