--- a/device_new.html
+++ b/device_new.html
@@ -92,9 +92,9 @@
           <div class="form-group">
             <label for="setting">Setting Options</label>
             <input type="text" class="form-control fc-multi" id="option1" placeholder="Option 1" value="">
-            <button class="btn btn-default">Add Option</button>
+            <button class="btn btn-default btn-add-option">Add Option</button>
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+          <button type="submit" class="btn btn-default btn-submit-new-device">Submit</button>
           <a href="#" onclick="history.back();" class="btn btn-default">Cancel</a>
         </form>
       </div>
