--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <p>Scheduled: 5:00pm</p>
               <p>Setting: On</p>
               <div class="actions">
-                <a class="btn btn-primary" href="lights_edit.html" role="button">Edit</a>
+                <a class="btn btn-primary" href="util_edit.html" role="button">Edit</a>
                 <input class="bs-switch hidden" type="checkbox" name="lights-on" checked>
                 <!-- <a class="btn btn-primary" href="#" role="button">Toggle Now</a> -->
               </div>
