--- a/util_new.html
+++ b/util_new.html
@@ -89,7 +89,7 @@
             <label for="title">Device/Action Title</label>
             <input type="text" class="form-control" id="title" placeholder="Enter Device/Action Title" value="">
           </div>
-          <div class="form-group">
+          <div class="form-group setting-options">
             <label for="setting">Setting Options</label>
             <input type="text" class="form-control fc-multi" id="option1" placeholder="Option 1" value="">
             <button class="btn btn-default btn-add-option">Add Option</button>
