--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
     <!-- Page Content -->
     <div id="page-content-wrapper">
       <div class="container-fluid">
-        <div class="row">
+      </div>
+    </div>
+        <!-- <div class="row">
           <div class="col-lg-4 device">
             <div class="jumbotron">
               <h2>Toggle Lights</h2>
@@ -96,7 +98,7 @@
               <div class="actions">
                 <a class="btn btn-primary" href="util_edit.html" role="button">Edit</a>
                 <input class="bs-switch hidden" type="checkbox" name="lights-on" checked>
-                <!-- <a class="btn btn-primary" href="#" role="button">Toggle Now</a> -->
+                <a class="btn btn-primary" href="#" role="button">Toggle Now</a>
               </div>
             </div>
           </div>
@@ -104,12 +106,12 @@
             <div class="jumbotron">
               <div class="create-wrapper">
                 <div class="create">
-                  <a href="device_new.html" class="black"><i class="fa fa-plus fa-5x"></i></a>
+                  <a href="util_new.html" class="black"><i class="fa fa-plus fa-5x"></i></a>
                 </div>
               </div>
             </div>
           </div>
-          <!-- <div class="col-lg-4 device">
+          <div class="col-lg-4 device">
             <div class="jumbotron">
               <h2>Play Music</h2>
               <p>Scheduled: Never</p>
@@ -119,9 +121,9 @@
                 <a class="btn btn-primary" href="#" role="button">Play Now</a>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
-        <!-- <div class="row">
+        <div class="row">
           <div class="col-lg-4 device">
             <div class="jumbotron">
               <h2>Set Temp</h2>
@@ -144,9 +146,9 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
-    </div>
+    </div> -->
     <!-- /#page-content-wrapper -->
 
   </div>
