--- a/util_new.html
+++ b/util_new.html
@@ -90,13 +90,29 @@
             <input type="text" class="form-control" id="title" placeholder="Enter Device/Action Title" value="">
           </div>
           <div class="form-group setting-options">
+            <label for="setting">Setting</label>
+            <div class="actions">
+              <input class="bs-switch hidden" type="checkbox" checked>
+            </div>
+            <!-- <input type="text" class="form-control fc-multi" id="option1" placeholder="Option 1" value=""> -->
+            <!-- <button class="btn btn-default btn-add-option">Add Option</button> -->
+          </div>
+          <button type="submit" class="btn btn-default btn-submit-new-device">Submit</button>
+          <a href="#" onclick="history.back();" class="btn btn-default">Cancel</a>
+        </form>
+        <!-- <form>
+          <div class="form-group">
+            <label for="title">Device/Action Title</label>
+            <input type="text" class="form-control" id="title" placeholder="Enter Device/Action Title" value="">
+          </div>
+          <div class="form-group setting-options">
             <label for="setting">Setting Options</label>
             <input type="text" class="form-control fc-multi" id="option1" placeholder="Option 1" value="">
             <button class="btn btn-default btn-add-option">Add Option</button>
           </div>
           <button type="submit" class="btn btn-default btn-submit-new-device">Submit</button>
           <a href="#" onclick="history.back();" class="btn btn-default">Cancel</a>
-        </form>
+        </form> -->
       </div>
     </div>
     <!-- /#page-content-wrapper -->
