--- a/device_new.html
+++ b/device_new.html
@@ -23,7 +23,6 @@
   <link rel="stylesheet" href="css/main.css">
 
   <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-  <script src="js/jquery.js"></script>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -53,7 +52,8 @@
             Connected Devices
           </a>
         </li>
-        <li> <a href="./lights.html" class="active">Toggle Lights</a> </li>
+        <li> <a href="./lights.html" class="">Toggle Lights</a> </li>
+        <li> <a href="#" class="active">New Device</a> </li>
         <!-- <li> <a href="#">Play Music</a> </li>
         <li> <a href="#">Set Temp</a> </li>
         <li> <a href="#">Security Cam</a> </li> -->
@@ -87,78 +87,14 @@
         <form>
           <div class="form-group">
             <label for="title">Device/Action Title</label>
-            <input type="text" class="form-control mid-length" id="title" placeholder="Enter Device/Action Title" value="Toggle Lights">
-          </div>
-          <div class="form-group form-inline">
-            <label>Scheduled Times</label>
-            <button class="li btn btn-default add-time">Add</button>
-            <script>
-              function removeHandler(e) {
-                $parent = $(e.target).parents('.li');
-                deleteSched($parent.attr('id'));
-                $parent.remove();
-              };
-              function changeHandler(e) {
-                console.log('e: ', e);
-                var time = $(e.target).val();
-                time = time.substring(0,2) + time.substring(3,5);
-                updateEndSched({
-                  scheduleID: e.target.id,
-                  end: time
-                });
-              };
-
-              $(function () {
-                $('.add-time').click(function(e) {
-                  e.preventDefault();
-                  var $button = $(e.target);
-                  createSched({end: 1200}, function(id) {
-                    $('<div id="'+id+'" class="li"> <input type="time" class="li form-control short" value="12:00"> <span class="remove"><i class="fa fa-times"></i></span> </div>')
-                    .insertBefore($button);
-                    $('.remove').click(removeHandler);
-                    $('.li > input[type="time"]').change(changeHandler);
-                  });
-                });
-
-                $('.remove').click(removeHandler);
-                $('.li > input[type="time"]').change(changeHandler);
-
-                getSchedules(function(schedules) {
-                  schedules = JSON.parse(schedules)
-                  schedules.forEach(function (sched) {
-                    console.log('sched: ', sched);
-                    sched.id     = sched[0];
-                    sched.time   = sched[1];
-                    console.log(sched);
-                    sched.time   = sched.time ? sched.time.splice(2, 0, ':') : null;
-                    sched.state  = sched[2];
-                    var html = '<div class="li sched" id="'+sched.id+'">'+
-                      '<input type="time" class="li form-control short" value="'+sched.time+'">'+
-                      '<span class="remove"><i class="fa fa-times"></i></span>'+
-                    '</div>';
-                    $('.add-time').before(html);
-                    $('.remove').click(removeHandler);
-                    $('.li > input[type="time"]').change(changeHandler);
-                  });
-                });
-              });
-            </script>
+            <input type="text" class="form-control" id="title" placeholder="Enter Device/Action Title" value="">
           </div>
           <div class="form-group">
-            <label for="setting-type">Current Setting</label>
-            <br>
-            <input class="bs-switch hidden" type="checkbox" name="lights-on" checked>
-            <script>
-              $(function () {
-                $('.bs-switch').on('switchChange.bootstrapSwitch', function(e, on) {
-                  obj = {};
-                  obj.state = on ? 1 : 0;
-                  updateUtil(obj);
-                });
-              });
-            </script>
+            <label for="setting">Setting Options</label>
+            <input type="text" class="form-control fc-multi" id="option1" placeholder="Option 1" value="">
+            <button class="btn btn-default">Add Option</button>
           </div>
-          <button onclick="history.back();" type="submit" class="btn btn-default save">Submit</button>
+          <button type="submit" class="btn btn-default">Submit</button>
           <a href="#" onclick="history.back();" class="btn btn-default">Cancel</a>
         </form>
       </div>
@@ -171,6 +107,7 @@
   <!-- scripts -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+  <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/bootstrap-switch.js"></script>
   <script src="js/plugins.js"></script>
