--- a/util_new.html
+++ b/util_new.html
@@ -52,11 +52,7 @@
             Connected Devices
           </a>
         </li>
-        <li> <a href="./lights.html" class="">Toggle Lights</a> </li>
-        <li> <a href="#" class="active">New Device</a> </li>
-        <!-- <li> <a href="#">Play Music</a> </li>
-        <li> <a href="#">Set Temp</a> </li>
-        <li> <a href="#">Security Cam</a> </li> -->
+        <li> <a href="#" class="new-device-link active">New Device</a> </li>
       </ul>
     </div>
     <!-- /#sidebar-wrapper -->
