--- a/util_edit.html
+++ b/util_edit.html
@@ -53,10 +53,6 @@
             Connected Devices
           </a>
         </li>
-        <li> <a href="./lights.html" class="active">Toggle Lights</a> </li>
-        <!-- <li> <a href="#">Play Music</a> </li>
-        <li> <a href="#">Set Temp</a> </li>
-        <li> <a href="#">Security Cam</a> </li> -->
       </ul>
     </div>
     <!-- /#sidebar-wrapper -->
@@ -92,71 +88,11 @@
           <div class="form-group form-inline">
             <label>Scheduled Times</label>
             <button class="li btn btn-default add-time">Add</button>
-            <script>
-              function removeHandler(e) {
-                $parent = $(e.target).parents('.li');
-                deleteSched($parent.attr('id'));
-                $parent.remove();
-              };
-              function changeHandler(e) {
-                console.log('e: ', e);
-                var time = $(e.target).val();
-                time = time.substring(0,2) + time.substring(3,5);
-                updateEndSched({
-                  scheduleID: e.target.id,
-                  end: time
-                });
-              };
-
-              $(function () {
-                $('.add-time').click(function(e) {
-                  e.preventDefault();
-                  var $button = $(e.target);
-                  createSched({end: 1200}, function(id) {
-                    $('<div id="'+id+'" class="li"> <input type="time" class="li form-control short" value="12:00"> <span class="remove"><i class="fa fa-times"></i></span> </div>')
-                    .insertBefore($button);
-                    $('.remove').click(removeHandler);
-                    $('.li > input[type="time"]').change(changeHandler);
-                  });
-                });
-
-                $('.remove').click(removeHandler);
-                $('.li > input[type="time"]').change(changeHandler);
-
-                getSchedules(function(schedules) {
-                  schedules = JSON.parse(schedules)
-                  schedules.forEach(function (sched) {
-                    console.log('sched: ', sched);
-                    sched.id     = sched[0];
-                    sched.time   = sched[1];
-                    console.log(sched);
-                    sched.time   = sched.time ? sched.time.splice(2, 0, ':') : null;
-                    sched.state  = sched[2];
-                    var html = '<div class="li sched" id="'+sched.id+'">'+
-                      '<input type="time" class="li form-control short" value="'+sched.time+'">'+
-                      '<span class="remove"><i class="fa fa-times"></i></span>'+
-                    '</div>';
-                    $('.add-time').before(html);
-                    $('.remove').click(removeHandler);
-                    $('.li > input[type="time"]').change(changeHandler);
-                  });
-                });
-              });
-            </script>
           </div>
           <div class="form-group">
             <label for="setting-type">Current Setting</label>
             <br>
-            <input class="bs-switch hidden" type="checkbox" name="lights-on" checked>
-            <script>
-              $(function () {
-                $('.bs-switch').on('switchChange.bootstrapSwitch', function(e, on) {
-                  obj = {};
-                  obj.state = on ? 1 : 0;
-                  updateUtil(obj);
-                });
-              });
-            </script>
+            <input class="bs-switch hidden" type="checkbox" checked>
           </div>
           <button onclick="history.back();" type="submit" class="btn btn-default save">Submit</button>
           <a href="#" onclick="history.back();" class="btn btn-default">Cancel</a>
@@ -175,6 +111,78 @@
   <script src="js/bootstrap-switch.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script>
+    function removeHandler(e) {
+      $parent = $(e.target).parents('.li');
+      deleteSched($parent.attr('id'));
+      $parent.remove();
+    };
+    function changeHandler(e) {
+      console.log('change sched e: ', e);
+      var tar  = $(e.target);
+
+      var time = tar.val();
+      var id  = tar.parents('.sched').attr('id');
+      time = time.substring(0,2) + time.substring(3,5);
+      updateSched({
+        id: id,
+        time: time
+      });
+    };
+
+    $(function () {
+
+      $('.bs-switch').on('switchChange.bootstrapSwitch', function(e, on) {
+        obj = {};
+        obj.state = on ? 1 : 0;
+        updateUtil(obj);
+      });
+
+      $('.add-time').click(function(e) {
+        e.preventDefault();
+        var $button = $(e.target);
+        console.log('$button: ', $button);
+        createSched({time: '1200'}, function(id) {
+          console.log('id: ', id);
+          $('<div id="'+id+'" class="li sched"> <input type="time" class="li time form-control short" value="12:00"> <span> <input class="bs-switch hidden" type="checkbox" checked> </span> <span class="remove"><i class="fa fa-times"></i></span> </div>')
+          .insertBefore($button);
+          $('.remove').click(removeHandler);
+          $('.li > input[type="time"]').change(changeHandler);
+
+          $('.bs-switch').bootstrapSwitch();
+          $('.bs-switch').on('switchChange.bootstrapSwitch', onSwitchChange);
+        });
+      });
+
+      $('.remove').click(removeHandler);
+      $('.li > input[type="time"]').change(changeHandler);
+
+      getSchedules(function(schedules) {
+        schedules = JSON.parse(schedules)
+        schedules.forEach(function (sched) {
+          console.log('sched: ', sched);
+          sched.id     = sched[0];
+          sched.time   = sched[1];
+          console.log(sched);
+          sched.time   = sched.time ? sched.time.splice(2, 0, ':') : null;
+          sched.state  = sched[2];
+          var checked  = sched.state == 1 ? 'checked' : '';
+          var html = '<div class="li sched" id="'+sched.id+'">'+
+            '<input type="time" class="li time form-control short" value="'+sched.time+'">'+
+            '<span> <input class="bs-switch hidden" type="checkbox" '+checked+'> </span>'+
+            '<span class="remove"><i class="fa fa-times"></i></span>'+
+          '</div>';
+          $('.add-time').before(html);
+          $('.remove').click(removeHandler);
+          $('.li > input[type="time"]').change(changeHandler);
+
+          $('.bs-switch').bootstrapSwitch();
+          $('.bs-switch').on('switchChange.bootstrapSwitch', onSwitchChange);
+        });
+      });
+
+    });
+  </script>
   <script>
     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
